tests/negative/gold/escape_test.gold
tests/negative/escape_test.toit:9:3: error: Unexpected <illegal>
  \ 
  ^
tests/negative/escape_test.toit:6:3: error: Invalid string: '\h'

  "\h"
  ^~~~
tests/negative/escape_test.toit:7:3: error: Invalid string: '\s'

  "\s"
  ^~~~
Compilation failed.
